tests/spec/compile-pass/018_array_clone_explicit_allocator.zn
// category: compile-pass
// profile: freestanding
// purpose: Array cloneIn explicitly selects an allocator and returns an owned Array

module tests.pass.arrayCloneInExplicitAllocator;

import core.alloc.GlobalAllocator;

fn cloneBytes(bytes: Array<U8>, mut allocator: GlobalAllocator) -> Array<U8> {
    return bytes.cloneIn(mut allocator);
}
