tests/spec/compile-fail/052_for_read_item_cannot_assign.zn
// category: compile-fail
// profile: freestanding
// purpose: read for iteration does not make the loop element writable

module tests.fail.forReadItemCannotAssign;

fn bad(mut bytes: ArraySlice<U8>) {
    for byte in mut bytes {
        byte = 0; // expected-error: read iteration item is not writable; use `for mut byte in mut bytes`
    }
}
